# MidManStudio_Unity

./: .gitignore  LICENSE  README.md
.github/: projectile-bench-template.html
.github/bench-results/: index.html  projectile-bench-results.json
.github/workflows/: bench-projectile.yml  build-rust-libs.yml  release-packages.yml
PackageCreatorSandbox/: Assembly-CSharp-Editor.csproj  Assembly-CSharp.csproj  MidManStudio.Netcode.Editor.csproj  MidManStudio.Netcode.csproj  MidManStudio.ProjectileSystem.Editor.csproj  MidManStudio.ProjectileSystem.Tests.Editor.csproj  MidManStudio.ProjectileSystem.Tests.csproj  MidManStudio.ProjectileSystem.csproj  MidManStudio.Utilities.Editor.csproj  MidManStudio.Utilities.Tests.Editor.csproj  MidManStudio.Utilities.Tests.csproj  MidManStudio.Utilities.csproj  PackageCreatorSandbox.sln
PackageCreatorSandbox/Assets/: CrackLib.asset  LibraryTypeProvider.asset  MID_AudioLibrary.asset  MID_LoggerSettings.asset  MaScnene.asset
PackageCreatorSandbox/Assets/AA_Scripts/: Test_1.cs
PackageCreatorSandbox/Assets/AB_Sprites/: Stickman_Base.psd
PackageCreatorSandbox/Assets/MidManStudio/Netcode/PoolProviders/: NetworkPoolTypeProvider_Netcode.asset
PackageCreatorSandbox/Assets/MidManStudio/ProjectileSystem/PoolProviders/: NetworkObjectPoolTypeProvider_ProjectileSystem.asset  ObjectPoolTypeProvider_ProjectileSystem.asset  ParticlePoolTypeProvider_ProjectileSystem.asset  PoolTypeProvider_ProjectileSystem.asset
PackageCreatorSandbox/Assets/MidManStudio/Utilities/PoolProviders/: ObjectPoolTypeProvider_Utilities.asset  ParticlePoolTypeProvider_Utilities.asset  PoolTypeProvider_Utilities.asset
PackageCreatorSandbox/Assets/Prefab/: Stickman_Base.prefab
PackageCreatorSandbox/Assets/Projectile/Mat/: DMat.mat
PackageCreatorSandbox/Assets/Projectile/Scene/: ProjectileScenes.unity
PackageCreatorSandbox/Assets/Projectile/Scene/ProjectileScenes/: GlobalLight Profile.asset
PackageCreatorSandbox/Assets/Projectile/So/Prefabs/: LobbyPrefab.prefab  (+2 more)
PackageCreatorSandbox/Assets/SceneManager/Config/: SceneTypeProvider.asset
PackageCreatorSandbox/Assets/SceneManager/Scene/: SceneManager.unity
PackageCreatorSandbox/Assets/SceneManager/Script/: ExampleSceneLoader.cs
PackageCreatorSandbox/Assets/Scenes/: SttD.unity
PackageCreatorSandbox/Assets/UiState/Scene/: LobbyStateTest.unity  MenuStateTest.unity  UiStatetest.unity
PackageCreatorSandbox/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
rust_lib/projectile_core/: Cargo.toml
rust_lib/projectile_core/benches/: sim_bench.rs
rust_lib/projectile_core/src/: collision.rs  config_store.rs  lib.rs  patterns.rs  simd.rs  simulation.rs  state.rs
(+8 files in other folders)
