[package]
name = "projectile_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "projectile_core"
crate-type = ["cdylib", "staticlib"]

[features]
default = []
scalar-math = []

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
lazy_static = "1.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
